Finalização plano de testes e ajustes projeto geral #45
Co-authored-by: Halex Vieira <halexmaciel@users.noreply.github.com>
Co-authored-by: Alonso Batista de Oliveira Junior <alonso-boj@users.noreply.github.com>

--- a/src/clipitch/erro.html
+++ b/src/clipitch/erro.html
@@ -190,7 +190,7 @@
   </body>
 
   <!-- Rodapé -->
-  <footer class="bg-custom py-4">
+  <footer class="fixed-bottom bg-custom py-4">
     <div class="container">
       <div class="row align-items-center text-white">
         <div class="col-lg-4 text-lg-left">
